adding favorites pages

--- a/foods.html
+++ b/foods.html
@@ -121,7 +121,7 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">MY FAVORITES</span>
-               <h1 class="is-capitalize text-lg">Travel Spots</h1>
+               <h1 class="is-capitalize text-lg">Foods</h1>
 
                <ul class="list-inline breadcumb-nav">
 				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -152,20 +152,22 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/travel/roadtrip.jpg" alt="" class="w-75" height="125">
+					<img src="image/food/varietyoffoods.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">My Favorite Spots</span>
+					<span class="text-color has-text-weight-bold">My Favorite Foods</span>
 					<h3 class="text-md mb-5 mt-3">
-						Road Trip Destinations
+						Delicious Eats
 					</h3>
-					<p>I find so much joy in road trips. There is nothing like escaping for the weekend. 
-						Zella and I often take day trips to the beach, the mountains, or Yosemite. We 
-						are very fortunate living in Central California because everything is fairly 
-						close by. California really offers so many beautiful destinations. Last year, 
-						Zella and I took a trip to Colorado to visit my brother and his family. Colorado is so stunningly beautiful. So many happy trees. 
+					<p>There really is so many good things to say about food. Its comforting, 
+						tasty, and keeps us alive (bonus!). I love trying new genres of food. 
+						I have not found one I am disappointed by yet. I love Indian, Italian, 
+						Mexican, Japanese, the list can go on forever. Food is a staple in our 
+						lives, why not enjoy it fully? What is your favorite food or dish? My 
+						mom cooks some mean fried chicken and biscuits and gravy...definitely 
+						my comfort food. 
 					</p>
 				</div>
 			</div>
@@ -175,18 +177,18 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Beach Time</span>
+						<span class="text-color has-text-weight-bold">Italian</span>
 						<h3 class="text-md mb-5 mt-3">
-							Ocean Vibes
+							Pasta Goodness
 						</h3>
-						<p>Our favorite beaches include: Morro Bay, Big Sur, and Spooner's Cove 
+						<p>One of my favorite dishes is pasta. My favorite is from Cheesecake Factory. They serve the Four Cheese Pasta. *Chefs Kiss*
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/travel/morrobay.jpg" alt="" class="w-100">
+						<img src="image/food/pasta.jpg" alt="" width="500" height="222">
 					</div>
 				</div>
 			</div>
@@ -195,16 +197,16 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/travel/Pebble Beach_lone cypress.jpg" alt="" class="w-100">
+					<img src="image/food/dragon.jpg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Pebble Beach</span>
+					<span class="text-color has-text-weight-bold">Japanese</span>
 					<h3 class="text-md mb-5 mt-3">
-						17 Mile Drive
+						Sushi Rolls
 					</h3>
-					<p>Just went to 17 Mile Drive last weekend and enjoyed the views.</p>
+					<p>Another food that is at the top of my list is sushi. Its light, refreshing, and not half bad for you. The Dragon Roll is always a favorite!</p>
 				</div>
 			</div>
 		</div>
