--- a/animals.html
+++ b/animals.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <title>Orbitor - Software Company Template</title>
+  <title>Smiley's World</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -47,7 +47,7 @@
 		 <nav class="navbar">
 			 <div class="navbar-brand">
 				 <a class="navbar-item" href="index.html">
-					 <img src="images/logo.png" alt="logo">
+					<img src="images/smiley face trans.png" alt="logo" width="50" height="50">
 				 </a>
 				 <button role="button" class="navbar-burger burger" data-hidden="true" data-target="navigation">
 					 <span aria-hidden="true"></span>
@@ -65,7 +65,7 @@
 					 <li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="zella.html">Zella</a>
 						<div class="navbar-dropdown">
-							<a class="navbar-item" href="zella.html">About Zella</a>
+
 							<a class="navbar-item" href="hobbies.html">Hobbies</a>
 							<a class="navbar-item" href="artwork.html">Artwork</a>
 							<a class="navbar-item" href="us.html">Us</a>
@@ -109,9 +109,6 @@
 					 </li>
 				 </ul>
 				 <ul class="navbar-end ml-0">
-					 <li class="navbar-item">
-						<a href="contact.html" class="btn btn-solid-border">Get an estimate <i class="fa fa-angle-right ml-2"></i></a>
-					 </li>
 				 </ul>
 			 </div>
 		 </nav>
@@ -123,13 +120,25 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Our pricing</span>
-               <h1 class="is-capitalize text-lg">Pricing Package</h1>
+               <span class="text-white">MY FAVORITES</span>
+               <h1 class="is-capitalize text-lg">Animals</h1>
 
                <ul class="list-inline breadcumb-nav">
-                  <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-                  <li class="list-inline-item"><span class="text-white">/</span></li>
-                  <li class="list-inline-item"><a href="#" class="text-white-50">Our pricing</a></li>
+				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="favorites.html" class="text-white-50">Favorites Main</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="music.html" class="text-white-50">Music</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="travel.html" class="text-white-50">Travel Spots</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="foods.html" class="text-white-50">Foods</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="people.html" class="text-white-50">People</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="animals.html" class="text-white-50">Animals</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="movies.html" class="text-white-50">Movies</a></li>
                </ul>
             </div>
          </div>
@@ -137,95 +146,55 @@
    </div>
 </section>
 
-<section class="section pricing">
+
+<section class="section service-2">
 	<div class="container">
-		<div class="columns is-justify-content-center">
+		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
-				<div class="heading has-text-centered mb-50">
-					<h2 class="">Our pricing</h2>
-					<p class="">Labore tempore ratione magnam iste sint dicta dolor doloremque similique tempora optio,
-						expedita veritatis enim nam itaque illum excepturi id dolores, officia?</p>
+				<div class="service-img">
+					<img src="image/animals/owl.jpeg" alt="" class="w-75" height="125">
+				</div>
+			</div>
+			<div class="column is-6-desktop">
+				<div class="service-info ">
+					<span class="text-color has-text-weight-bold">First Favorite</span>
+					<h3 class="text-md mb-5 mt-3">
+						Owls
+					</h3>
+					<p>Owls have been one of my favorite animals since I can remember. I just love
+						how unique they are. From their looks to their hunting abilities, owls have 
+						always stood out to me. They are superior hunters with amazing wing spans. 
+						Truly beautiful and intelligent creatures. 
+					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="columns is-multiline">
-			<div class="column is-4-desktop is-6-tablet">
-				<div class="pricing-block card has-text-centered">
-					<div class="price-header">
-						<span class="is-uppercase letter-spacing h5">Basic</span>
-						<h2>$29.99</h2>
-						<h6 class="text-muted">Yearly</h6>
-					</div>
+		<div class="content-padding is-relative">
+			<div class="columns is-align-items-center">
+				<div class="column is-6-desktop">
+					<div class="service-info">
+						<span class="text-color has-text-weight-bold">Second Favorite</span>
+						<h3 class="text-md mb-5 mt-3">
+							The Octopus
+						</h3>
+						<p>In my opinion, octopuses are the most amazing creatures. They are so alien
+							like and stunningly beautiful. They are one of the most intelligent, playful, emotionally aware
+							animals on the planet. Watching them swim in water is mesmerizing. I have always been 
+							drawn to them and fascinated by them. Random fact: They will randomly
+							punch other fish for no reason, that makes them alright in my book. 
+						</p>
 
-					<div class="price-body">
-						<ul class="list-unstyled mb-0">
-							<li>50 gb Hosting</li>
-							<li>Business Analysis</li>
-							<li>24 Hours Support</li>
-							<li>Customer Management</li>
-						</ul>
 					</div>
-
-					<div class="price-footer">
-						<a href="#" class="btn btn-main">Choose plan</a>
-					</div>
-
-					<a href="#" class="text-underline">Get your 7 Days Free trial</a>
 				</div>
-			</div>
-
-			<div class="column is-4-desktop is-6-tablet">
-				<div class="pricing-block card has-text-centered featured">
-					<div class="price-header">
-						<span class="is-uppercase letter-spacing h5">Standard</span>
-						<h2>$29.99</h2>
-						<h6>Yearly</h6>
+				<div class="column is-6-desktop">
+					<div class="service-img">
+						<img src="image/animals/octopus.jpg" alt="" width="500" height="222">
 					</div>
-
-					<div class="price-body">
-						<ul class="list-unstyled mb-0">
-							<li>50 gb Hosting</li>
-							<li>Business Analysis</li>
-							<li>24 Hours Support</li>
-							<li>Customer Management</li>
-						</ul>
-					</div>
-
-					<div class="price-footer">
-						<a href="#" class="btn btn-main">Choose plan</a>
-					</div>
-
-					<a href="#" class="text-underline">more additional features</a>
-				</div>
-			</div>
-
-			<div class="column is-4-desktop is-6-tablet">
-				<div class="pricing-block card has-text-centered">
-					<div class="price-header">
-						<span class="is-uppercase letter-spacing h5">Premium</span>
-						<h2>$29.99</h2>
-						<h6 class="text-muted">Yearly</h6>
-					</div>
-
-					<div class="price-body">
-						<ul class="list-unstyled mb-0">
-							<li>50 gb Hosting</li>
-							<li>Business Analysis</li>
-							<li>24 Hours Support</li>
-							<li>Customer Management</li>
-						</ul>
-					</div>
-
-					<div class="price-footer">
-						<a href="#" class="btn btn-main">Choose plan</a>
-					</div>
-
-					<a href="#" class="text-underline">More advance features</a>
 				</div>
 			</div>
 		</div>
-	</div>
+
 </section>
 
 
@@ -236,17 +205,17 @@
 			<div class="column is-3-widescreen is-6-tablet">
 				<div class="widget">
 					<div class="logo mb-4">
-						<h3>Orbitor</h3>
+						<h3>Smiley's World</h3>
 					</div>
-					<p>Tempora dolorem voluptatum nam vero assumenda voluptate, facilis ad eos obcaecati tenetur veritatis eveniet distinctio.</p>
+					<p>My attempt to share a bit of my life with you through a website I've created.</p>
 				</div>
 			</div>
 			<div class="column is-2-widescreen is-6-desktop is-6-tablet ml-auto">
 				<div class="widget">
-					<h4 class="is-capitalize mb-4">Company</h4>
+					<h4 class="is-capitalize mb-4">Home</h4>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">About</a></li>
 						<li><a href="#">Services</a></li>
 						<li><a href="#">Team</a></li>
 						<li><a href="#">Contact</a></li>
@@ -268,8 +237,8 @@
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
 				<div class="widget widget-contact">
 					<h4 class="is-capitalize mb-4">Get in Touch</h4>
-					<h6><a href="tel:+23-345-67890" > <i class="ti-headphone-alt mr-3"></i>Support@megakit.com</a></h6>
-					<h6><a href="mailto:support@gmail.com" > <i class="ti-mobile mr-3"></i>+23-456-6588</a></h6>
+					<h6><a href="tel:+23-345-67890" > <i class="ti-headphone-alt mr-3"></i>email@emaildomain</a></h6>
+					<h6><a href="mailto:support@gmail.com" > <i class="ti-mobile mr-3"></i>559*123*4556</a></h6>
 
 					<ul class="list-inline footer-socials mt-5">
 						<li class="list-inline-item"><a href="https://www.facebook.com/themefisher"><i class="ti-facebook mr-2"></i></a></li>
