--- a/movies.html
+++ b/movies.html
@@ -121,7 +121,7 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">MY FAVORITES</span>
-               <h1 class="is-capitalize text-lg">Foods</h1>
+               <h1 class="is-capitalize text-lg">Movies</h1>
 
                <ul class="list-inline breadcumb-nav">
 				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -152,22 +152,23 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/varietyoffoods.jpg" alt="" class="w-75" height="125">
+					<img src="image/movies/theater.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">My Favorite Foods</span>
+					<span class="text-color has-text-weight-bold">My Favorite Movies</span>
 					<h3 class="text-md mb-5 mt-3">
-						Delicious Eats
+						Movies at Home or the Theater
 					</h3>
-					<p>There really is so many good things to say about food. Its comforting, 
-						tasty, and keeps us alive (bonus!). I love trying new genres of food. 
-						I have not found one I am disappointed by yet. I love Indian, Italian, 
-						Mexican, Japanese, the list can go on forever. Food is a staple in our 
-						lives, why not enjoy it fully? What is your favorite food or dish? My 
-						mom cooks some mean fried chicken and biscuits and gravy...definitely 
-						my comfort food. 
+					<p>Movies have always been a favorite part of life. My myself and my family are avid 
+					   movie viewers. There is something about sitting in the theater and watching a movie 
+					   with some popcorn and snacks. It takes you somewhere else, somewhere new. My favorite 
+					   genres are adventures, dramas, horror, psychological thrillers, basically anything that
+					   can entertain me. I am not the biggest fans of romance or rom-coms, but my friends keep me 
+					   from always falling back into the same category or theme of a movie. During my our free time, 
+					   if we are not listening to music, Zella and I can be found cuddling and watching our favorite 
+					   movies.  
 					</p>
 				</div>
 			</div>
@@ -177,18 +178,18 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Italian</span>
+						<span class="text-color has-text-weight-bold"></span>
 						<h3 class="text-md mb-5 mt-3">
-							Pasta Goodness
+							Boondock Saints
 						</h3>
-						<p>One of my favorite dishes is pasta. My favorite is from Cheesecake Factory. They serve the Four Cheese Pasta. *Chefs Kiss*
+						<p>
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/food/pasta.jpg" alt="" width="500" height="222">
+						<img src="image/movies/Boondock.jpg" alt="" width="500" height="222">
 					</div>
 				</div>
 			</div>
@@ -197,22 +198,79 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/dragon.jpg" alt="" class="w-100">
+					<img src="image/movies/Inception.jpg" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Japanese</span>
+					<span class="text-color has-text-weight-bold"></span>
 					<h3 class="text-md mb-5 mt-3">
-						Sushi Rolls
+						Inception
 					</h3>
-					<p>Another food that is at the top of my list is sushi. Its light, 
-						refreshing, and not half bad for you. The Dragon Roll is always 
-						a favorite!</p>
+					<p></p>
 				</div>
 			</div>
 		</div>
 	</div>
+	<section class="section service-2">
+		<div class="container">
+			<div class="columns is-align-items-center">
+				<div class="column is-6-desktop">
+					<div class="service-img">
+						<img src="image/movies/hereditary.jpg" alt="" class="w-75" height="125">
+					</div>
+				</div>
+				<div class="column is-6-desktop">
+					<div class="service-info ">
+						<span class="text-color has-text-weight-bold"></span>
+						<h3 class="text-md mb-5 mt-3">
+							Hereditary
+						</h3>
+						<p>
+						</p>
+					</div>
+				</div>
+			</div>
+	
+			<div class="content-padding is-relative">
+				<div class="columns is-align-items-center">
+					<div class="column is-6-desktop">
+						<div class="service-info">
+							<span class="text-color has-text-weight-bold"></span>
+							<h3 class="text-md mb-5 mt-3">
+								Bob Ross
+							</h3>
+							<p>I know this isn't a movie, but I love me some Bob Ross.
+							</p>
+	
+						</div>
+					</div>
+					<div class="column is-6-desktop">
+						<div class="service-img">
+							<img src="image/movies/bobross.jpg" alt="" width="500" height="222">
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="columns is-align-items-center">
+				<div class="column is-6-desktop">
+					<div class="service-img">
+						<img src="image/movies/empirerecords.jpg" alt="" class="w-100">
+					</div>
+				</div>
+				<div class="column is-6-desktop">
+					<div class="service-info">
+						<span class="text-color has-text-weight-bold"></span>
+						<h3 class="text-md mb-5 mt-3">
+							Empire Records
+						</h3>
+						<p></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 </section>
 
 
