--- a/people.html
+++ b/people.html
@@ -121,7 +121,7 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">MY FAVORITES</span>
-               <h1 class="is-capitalize text-lg">Foods</h1>
+               <h1 class="is-capitalize text-lg">People</h1>
 
                <ul class="list-inline breadcumb-nav">
 				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -152,22 +152,30 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/varietyoffoods.jpg" alt="" class="w-75" height="125">
+					<img src="image/people/friends.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">My Favorite Foods</span>
+					<span class="text-color has-text-weight-bold">Some of My Favorite Souls</span>
 					<h3 class="text-md mb-5 mt-3">
-						Delicious Eats
+					My Best Friends 	
 					</h3>
-					<p>There really is so many good things to say about food. Its comforting, 
-						tasty, and keeps us alive (bonus!). I love trying new genres of food. 
-						I have not found one I am disappointed by yet. I love Indian, Italian, 
-						Mexican, Japanese, the list can go on forever. Food is a staple in our 
-						lives, why not enjoy it fully? What is your favorite food or dish? My 
-						mom cooks some mean fried chicken and biscuits and gravy...definitely 
-						my comfort food. 
+				<div>
+					<p>
+					<center>
+						<i>“Each friend represents a world in us, a world possibly not born until they arrive, and it is 
+						only by this meeting that a new world is born.” — Anais Nin.
+					</i>
+					</p>
+				</center>
+				</div>
+						<p>Friends are one of the most important parts of our individual lives. Choosing who is in our lives 
+						can have a major impact, both good and bad. My favorite people are those who have transformed 
+						my world in ways I am forever thankful for. We do not get to choose our families, but we do 
+						get to choose the next best thing, friends. These are just a few of the people I am eternally 
+						grateful for. 
+
 					</p>
 				</div>
 			</div>
@@ -177,18 +185,20 @@
 			<div class="columns is-align-items-center">
 				<div class="column is-6-desktop">
 					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Italian</span>
+						<span class="text-color has-text-weight-bold">Besties</span>
 						<h3 class="text-md mb-5 mt-3">
-							Pasta Goodness
+				         Sarah
 						</h3>
-						<p>One of my favorite dishes is pasta. My favorite is from Cheesecake Factory. They serve the Four Cheese Pasta. *Chefs Kiss*
+						<p>This woman is a real one. My true ride or die. You can always find us taking adventures. 
+							From hiking, traveling, concerts, or shopping we will find a way to have the best time 
+							full of laughs and fond memories. 
 						</p>
 
 					</div>
 				</div>
 				<div class="column is-6-desktop">
 					<div class="service-img">
-						<img src="image/food/pasta.jpg" alt="" width="500" height="222">
+						<img src="image/people/sarahandi.JPG" alt="" width="500" height="222">
 					</div>
 				</div>
 			</div>
@@ -197,18 +207,18 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/food/dragon.jpg" alt="" class="w-100">
+					<img src="image/people/tony.JPG" alt="" class="w-100">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info">
-					<span class="text-color has-text-weight-bold">Japanese</span>
+					<span class="text-color has-text-weight-bold">My Pillar</span>
 					<h3 class="text-md mb-5 mt-3">
-						Sushi Rolls
+						Tony
 					</h3>
-					<p>Another food that is at the top of my list is sushi. Its light, 
-						refreshing, and not half bad for you. The Dragon Roll is always 
-						a favorite!</p>
+					<p>Tony is my stoic grumpy teddy bear (can't tell him I said that, lol). The one who keeps me grounded and focused. Full of sage advice and 
+					   always looking out for me and mine. Always reliable and goofy, he is one of my favorite people.
+					</p>
 				</div>
 			</div>
 		</div>
