updating page footers

--- a/service.html
+++ b/service.html
@@ -96,8 +96,7 @@
 					<li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="service.html">Family</a>
 						<div class="navbar-dropdown">
-							 <a class="navbar-item" href="service.html">Father</a>
-							 <a class="navbar-item" href="pricing.html">Mother</a>
+							 <a class="navbar-item" href="service.html">Mom & Dad</a>
 							 <a class="navbar-item" href="blog-sidebar.html">Brother & Sister-in-Law</a>
 							 <a class="navbar-item" href="blog-single.html">Nieces</a>
 						 </div>
