--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,11 @@
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  
+  <!-- theme meta -->
+  <meta name="theme-name" content="orbitor-bulma" />
 
-  <title>Orbitor - Software Company Template</title>
+  <title>Smiley's World</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -47,7 +50,7 @@
 		 <nav class="navbar">
 			 <div class="navbar-brand">
 				 <a class="navbar-item" href="index.html">
-					 <img src="images/logo.png" alt="logo">
+					 <img src="images/smiley face trans.png" alt="logo" width="50" height="50">
 				 </a>
 				 <button role="button" class="navbar-burger burger" data-hidden="true" data-target="navigation">
 					 <span aria-hidden="true"></span>
@@ -97,8 +100,7 @@
 					 <li class="navbar-item has-dropdown">
 						 <a class="navbar-link">Family</a>
 						 <div class="navbar-dropdown">
-							 <a class="navbar-item" href="service.html">Father</a>
-							 <a class="navbar-item" href="pricing.html">Mother</a>
+							 <a class="navbar-item" href="service.html">Mom & Dad</a>
 							 <a class="navbar-item" href="blog-sidebar.html">Brother & Sister-in-Law</a>
 							 <a class="navbar-item" href="blog-single.html">Nieces</a>
 						 </div>
@@ -106,11 +108,6 @@
 					 
 					 <li class="navbar-item">
 						 <a class="navbar-link" href="contact.html">Contact</a>
-					 </li>
-				 </ul>
-				 <ul class="navbar-end ml-0">
-					 <li class="navbar-item">
-						<a href="contact.html" class="btn btn-solid-border">Get an estimate <i class="fa fa-angle-right ml-2"></i></a>
 					 </li>
 				 </ul>
 			 </div>
@@ -121,13 +118,13 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">Contact Us</span>
+               <span class="text-white">Contact Me</span>
                <h1 class="is-capitalize text-lg">Get in Touch</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
-                  <li class="list-inline-item"><a href="#" class="text-white-50">Contact Us</a></li>
+                  <li class="list-inline-item"><a href="#" class="text-white-50">Contact Me</a></li>
                </ul>
             </div>
          </div>
@@ -154,17 +151,6 @@
                             <div class="notification is-success contact__msg mb-4" style="display:none" role="alert">
                                 Your message was sent successfully.
                             </div>
-
-                            <select class="input" id="exampleFormControlSelect1">
-                                <option>I Need help in ...</option>
-                                <option>Software Design</option>
-                                <option>Development cycle</option>
-                                <option>Software Development</option>
-                                <option>Maintenance</option>
-                                <option>Process Query</option>
-                                <option>Cost and Duration</option>
-                                <option>Modal Delivery</option>
-                            </select>
                         </div>
                         <div class="column is-12">
                             <input name="subject" id="subject" type="text" class="input" placeholder="Your Subject">
@@ -189,96 +175,29 @@
                 <div class="short-info">
                      <ul class="list-unstyled">
                          <li>
-                            <h5>Call Us</h5>
-                            +88 01672 506 744
+                            <h5>Call Me</h5>
+                            867-5309
                         </li>
                         <li>
-                            <h5>Email Us</h5>
-                            contact@mail.com
+                            <h5>Email me</h5>
+                            fakeemail@gmail.com
                         </li>
                         <li>
-                            <h5>Location Map</h5>
-                            North Main Street,Brooklyn Australia
+                            <h5>Location</h5>
+                            Fresno, California
                         </li>
                     </ul>
 
                     <ul class="social-icons list-inline mt-5">
-                        <li class="list-inline-item">
-                            <a href="http://www.themefisher.com"><i class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="http://www.themefisher.com"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="http://www.themefisher.com"><i class="fab fa-linkedin-in"></i></a>
-                        </li>
+
                     </ul>
                 </div>
             </div>
         </div>
 
-         <div class="columns is-multiline">
-            <div class="column is-12">
-                 <div class="google-map mt-90 mb-6">
-                    <div id="map"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="columns is-multiline">
-            <div class="column is-4-desktop is-6-tablet">
-                <div class="contact-content">
-                    <h4 class="mb-4">Corporate Office</h4>
-
-                    <ul class="address-block list-unstyled">
-                        <li>
-                            <i class="ti-location-pin mr-3"></i>North Main Street,Brooklyn Australia
-                        </li>
-                        <li>
-                            <i class="ti-email mr-3"></i>Email: contact@mail.com
-                        </li>
-                        <li>
-                            <i class="ti-mobile mr-3"></i>Phone:+88 01672 506 744
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
+        
             <div class="column is-4-desktop is-6-tablet">
                 <div class="contact-info">
-                    <h4 class="mb-4">USA Location</h4>
-                    <ul class="address-block list-unstyled">
-                        <li>
-                            <i class="ti-location-pin mr-3"></i>North Main Street,Brooklyn Australia
-                        </li>
-                        <li>
-                            <i class="ti-email mr-3"></i>Email: contact@mail.com
-                        </li>
-                        <li>
-                            <i class="ti-mobile mr-3"></i>Phone:+88 01672 506 744
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="column is-4-desktop is-6-tablet">
-                <div class="contact-info">
-                    <h4 class="mb-4">Europe</h4>
-                    <ul class="address-block list-unstyled">
-                        <li>
-                            <i class="ti-location-pin mr-3"></i>North Main Street,Brooklyn Australia
-                        </li>
-                        <li>
-                            <i class="ti-email mr-3"></i>Email: contact@mail.com
-                        </li>
-                        <li>
-                            <i class="ti-mobile mr-3"></i>Phone:+88 01672 506 744
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <!-- footer Start -->
