--- a/degree.html
+++ b/degree.html
@@ -97,8 +97,7 @@
 					<li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="family.html">Family</a>
 						<div class="navbar-dropdown">
-							 <a class="navbar-item" href="service.html">Father</a>
-							 <a class="navbar-item" href="pricing.html">Mother</a>
+							 <a class="navbar-item" href="service.html">Mom & Dad</a>
 							 <a class="navbar-item" href="blog-sidebar.html">Brother & Sister-in-Law</a>
 							 <a class="navbar-item" href="blog-single.html">Nieces</a>
 						 </div>
@@ -186,25 +185,11 @@
 			<div class="column is-2-widescreen is-6-desktop is-6-tablet ml-auto">
 				<div class="widget">
 					<h4 class="is-capitalize mb-4">Home</h4>
-
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="index.html">About</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
 				<div class="widget">
-					<h4 class="is-capitalize mb-4">Support</h4>
 
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="#">FAQ</a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
@@ -212,12 +197,6 @@
 					<h4 class="is-capitalize mb-4">Get in Touch</h4>
 					<h6><a href="tel:+23-345-67890" > <i class="ti-headphone-alt mr-3"></i>email@emaildomain</a></h6>
 					<h6><a href="mailto:support@gmail.com" > <i class="ti-mobile mr-3"></i>559*123*4556</a></h6>
-
-					<ul class="list-inline footer-socials mt-5">
-						<li class="list-inline-item"><a href="https://www.facebook.com/themefisher"><i class="ti-facebook mr-2"></i></a></li>
-						<li class="list-inline-item"><a href="https://twitter.com/themefisher"><i class="ti-twitter mr-2"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/"><i class="ti-linkedin mr-2 "></i></a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
