--- a/movies.html
+++ b/movies.html
@@ -20,7 +20,7 @@
   <title>Smiley's World</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="/image/favicon/favicon-32x32.png" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bulma/bulma.min.css">
