updating family page

--- a/music.html
+++ b/music.html
@@ -12,6 +12,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author" content="themefisher.com">
+  <meta name="description" content="favorites">
+  <meta name="keywords" content="j cole, skip marley, midland, brent faiyaz">
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -97,9 +99,9 @@
 					<li class="navbar-item has-dropdown">
 						<a class="navbar-link" href="family.html">Family</a>
 						<div class="navbar-dropdown">
-							 <a class="navbar-item" href="service.html">Mom & Dad</a>
-							 <a class="navbar-item" href="blog-sidebar.html">Brother & Sister-in-Law</a>
-							 <a class="navbar-item" href="blog-single.html">Nieces</a>
+							 <a class="navbar-item" href="momdad.html">Mom & Dad</a>
+							 <a class="navbar-item" href="brothersister.html">Brother & Sister-in-Law</a>
+							 <a class="navbar-item" href="nieces.html">Nieces</a>
 						 </div>
 					 </li>
 					 
