--- a/family.html
+++ b/family.html
@@ -12,8 +12,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author" content="themefisher.com">
-  <meta name="description" content="favorites">
-  <meta name="keywords" content="sarah, tony">
+  <meta name="description" content="family main">
+  <meta name="keywords" content="family introduction, meet my family">
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -121,25 +121,21 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">MY FAVORITES</span>
-               <h1 class="is-capitalize text-lg">People</h1>
+               <span class="text-white">MY GOALS</span>
+               <h1 class="is-capitalize text-lg">Owning a Home</h1>
 
                <ul class="list-inline breadcumb-nav">
-				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="favorites.html" class="text-white-50">Favorites Main</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="music.html" class="text-white-50">Music</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="travel.html" class="text-white-50">Travel Spots</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="foods.html" class="text-white-50">Foods</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="people.html" class="text-white-50">People</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="animals.html" class="text-white-50">Animals</a></li>
-				<li class="list-inline-item"><span class="text-white">/</span></li>
-				<li class="list-inline-item"><a href="movies.html" class="text-white-50">Movies</a></li>
+                  <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+                  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="goals.html" class="text-white-50">Goals Main</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Degree</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="house.html" class="text-white-50">House</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Career</a></li>
+				  <li class="list-inline-item"><span class="text-white">/</span></li>
+				  <li class="list-inline-item"><a href="motorcycle.html" class="text-white-50">Motorcycle</a></li>
                </ul>
             </div>
          </div>
@@ -153,77 +149,27 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/people/friends.jpg" alt="" class="w-75" height="125">
+					<img src="image/goals/ownahome.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Some of My Favorite Souls</span>
+					<span class="text-color has-text-weight-bold">Being a Homeowner</span>
 					<h3 class="text-md mb-5 mt-3">
-					My Best Friends 	
+						
 					</h3>
-				<div>
-					<p>
-					<center>
-						<i>“Each friend represents a world in us, a world possibly not born until they arrive, and it is 
-						only by this meeting that a new world is born.” — Anais Nin.
-					</i>
-					</p>
-				</center>
-				</div>
-						<p>Friends are one of the most important parts of our individual lives. Choosing who is in our lives 
-						can have a major impact, both good and bad. My favorite people are those who have transformed 
-						my world in ways I am forever thankful for. We do not get to choose our families, but we do 
-						get to choose the next best thing, friends. These are just a few of the people I am eternally 
-						grateful for. 
-
+					<p>I would love to purchase a home for myself and my daughter. We currently 
+						live with my parents (not as bad as it sounds), this was the best scenario 
+						to help me save money for a down payment. I am grateful for getting along 
+						with my parents enough to live with them and it really does take a village 
+						to raise children. But with that being said, Zella and I are ready to make the 
+						next jump into a place we can call ours. 
 					</p>
 				</div>
 			</div>
 		</div>
 
-		<div class="content-padding is-relative">
-			<div class="columns is-align-items-center">
-				<div class="column is-6-desktop">
-					<div class="service-info">
-						<span class="text-color has-text-weight-bold">Besties</span>
-						<h3 class="text-md mb-5 mt-3">
-				         Sarah
-						</h3>
-						<p>This woman is a real one. My true ride or die. You can always find us taking adventures. 
-							From hiking, traveling, concerts, or shopping we will find a way to have the best time 
-							full of laughs and fond memories. 
-						</p>
-
-					</div>
-				</div>
-				<div class="column is-6-desktop">
-					<div class="service-img">
-						<img src="image/people/sarahandi.JPG" alt="" width="500" height="222">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="columns is-align-items-center">
-			<div class="column is-6-desktop">
-				<div class="service-img">
-					<img src="image/people/tony.JPG" alt="" class="w-100">
-				</div>
-			</div>
-			<div class="column is-6-desktop">
-				<div class="service-info">
-					<span class="text-color has-text-weight-bold">My Pillar</span>
-					<h3 class="text-md mb-5 mt-3">
-						Tony
-					</h3>
-					<p>Tony is my stoic grumpy teddy bear (can't tell him I said that, lol). The one who keeps me grounded and focused. Full of sage advice and 
-					   always looking out for me and mine. Always reliable and goofy, he is one of my favorite people.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
+		
 </section>
 
 
@@ -242,25 +188,11 @@
 			<div class="column is-2-widescreen is-6-desktop is-6-tablet ml-auto">
 				<div class="widget">
 					<h4 class="is-capitalize mb-4">Home</h4>
-
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="index.html">About</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
 				<div class="widget">
-					<h4 class="is-capitalize mb-4">Support</h4>
 
-					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="#">FAQ</a></li>
-					</ul>
 				</div>
 			</div>
 			<div class="column is-3-widescreen is-6-desktop is-6-tablet">
@@ -268,12 +200,6 @@
 					<h4 class="is-capitalize mb-4">Get in Touch</h4>
 					<h6><a href="tel:+23-345-67890" > <i class="ti-headphone-alt mr-3"></i>email@emaildomain</a></h6>
 					<h6><a href="mailto:support@gmail.com" > <i class="ti-mobile mr-3"></i>559*123*4556</a></h6>
-
-					<ul class="list-inline footer-socials mt-5">
-						<li class="list-inline-item"><a href="https://www.facebook.com/themefisher"><i class="ti-facebook mr-2"></i></a></li>
-						<li class="list-inline-item"><a href="https://twitter.com/themefisher"><i class="ti-twitter mr-2"></i></a></li>
-						<li class="list-inline-item"><a href="https://www.pinterest.com/themefisher/"><i class="ti-linkedin mr-2 "></i></a></li>
-					</ul>
 				</div>
 			</div>
 		</div>
