family page updates

--- a/animals.html
+++ b/animals.html
@@ -121,8 +121,8 @@
       <div class="columns">
          <div class="column is-12">
             <div class="block has-text-centered">
-               <span class="text-white">FAMILY</span>
-               <h1 class="is-capitalize text-lg">Family</h1>
+               <span class="text-white">MY FAVORITES</span>
+               <h1 class="is-capitalize text-lg">Animals</h1>
 
                <ul class="list-inline breadcumb-nav">
 				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
