--- a/momdad.html
+++ b/momdad.html
@@ -122,14 +122,14 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">FAMILY</span>
-               <h1 class="is-capitalize text-lg">My Family</h1>
+               <h1 class="is-capitalize text-lg">My Mom & Dad</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
                   <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="family.html" class="text-white-50">Family Main</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Mom & Dad</a></li>
+				  <li class="list-inline-item"><a href="momdad.html" class="text-white-50">Mom & Dad</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="house.html" class="text-white-50">Brother & Sister-in-Law</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
@@ -147,12 +147,12 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/family/familymain.jpg" alt="" class="w-75" height="125">
+					<img src="image/family/mom&dad.jpeg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Family</span>
+					<span class="text-color has-text-weight-bold">Mom & Dad</span>
 					<h3 class="text-md mb-5 mt-3">
 						
 					</h3>
