--- a/brothersister.html
+++ b/brothersister.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author" content="themefisher.com">
   <meta name="description" content="family">
-  <meta name="keywords" content="mom, dad">
+  <meta name="keywords" content="brother, sister-in-Law">
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -122,7 +122,7 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">FAMILY</span>
-               <h1 class="is-capitalize text-lg">My Mom & Dad</h1>
+               <h1 class="is-capitalize text-lg">My Brother and his Wife</h1>
 
                <ul class="list-inline breadcumb-nav">
                   <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -131,9 +131,9 @@
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="momdad.html" class="text-white-50">Mom & Dad</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="house.html" class="text-white-50">Brother & Sister-in-Law</a></li>
+				  <li class="list-inline-item"><a href="brothersister.html" class="text-white-50">Brother & Sister-in-Law</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Nieces</a></li>		
+				  <li class="list-inline-item"><a href="nieces.html" class="text-white-50">Nieces</a></li>		
                </ul>
             </div>
          </div>
@@ -147,30 +147,51 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/family/mom&dad.jpeg" alt="" class="w-75" height="125">
+					<img src="image/family/michaelme.jpeg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Mom & Dad</span>
+					<span class="text-color has-text-weight-bold">My Role Model</span>
 					<h3 class="text-md mb-5 mt-3">
-						
+						My Brother
 					</h3>
-					<p>My mom and dad have been married for over forty years. 
-						That is no small feat! I am so proud of them and thankful 
-						to them for showing me what a happy marriage looks like. 
-						They were together in middle school, my dad moved away 
-						and this ended their relationship. But that wasn’t the end 
-						of the story for them. They randomly ran into each other at a Christmas 
-						party about ten years later and the rest is history! 
-						It certainly feels like fate played a role in joining 
-						these two together again. 
+					<p>My brother’s name is Michael. He is ten years older than me, almost to 
+						the day. He has been my best friend since I can remember. I have always 
+						seen him as a role model. Even as a young kid, I always wanted his attention 
+						or to hang out with him. He is a father and provider for his family. He is 
+						a generous soul and will do a lot for those he loves. I am proud of him on 
+						so many levels.  
 					</p>
 				</div>
 			</div>
 		</div>
 
-		
+		<div class="content-padding is-relative">
+			<div class="columns is-align-items-center">
+				<div class="column is-6-desktop">
+					<div class="service-info">
+						<span class="text-color has-text-weight-bold">My Sister-in-Law</span>
+						<h3 class="text-md mb-5 mt-3">
+							Nicole :)
+						</h3>
+						<p>This is my sister-in-law; her name is Nicole. Her and Michael have been married 
+							for 22 years. Nicole is one of the funniest people I know. She can walk into a 
+							room full of strangers and walk out with a bunch of new friends. She has a big 
+							heart and will fiercely defend those she loves. She and Michael had two little 
+							girls, Kaitlyn and Ella. Nicole is a one-of-a-kind person, beautiful inside and
+							out.  
+						</p>
+
+					</div>
+				</div>
+				<div class="column is-6-desktop">
+					<div class="service-img">
+						<img src="image/family/michaelnic.jpeg" alt="" width="500" height="222">
+					</div>
+				</div>
+			</div>
+		</div>
 </section>
 
 
