--- a/family.html
+++ b/family.html
@@ -129,11 +129,11 @@
                   <li class="list-inline-item"><span class="text-white">/</span></li>
 				  <li class="list-inline-item"><a href="family.html" class="text-white-50">Family Main</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="degree.html" class="text-white-50">Mom & Dad</a></li>
+				  <li class="list-inline-item"><a href="momdad.html" class="text-white-50">Mom & Dad</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="house.html" class="text-white-50">Brother & Sister-in-Law</a></li>
+				  <li class="list-inline-item"><a href="brothersister.html" class="text-white-50">Brother & Sister-in-Law</a></li>
 				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="career.html" class="text-white-50">Nieces</a></li>		
+				  <li class="list-inline-item"><a href="nieces.html" class="text-white-50">Nieces</a></li>		
                </ul>
             </div>
          </div>
