adding nieces page

--- a/nieces.html
+++ b/nieces.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Orbitor,business,company,agency,modern,bootstrap4,tech,software">
   <meta name="author" content="themefisher.com">
   <meta name="description" content="family">
-  <meta name="keywords" content="mom, dad">
+  <meta name="keywords" content="kaitlyn, ella, nieces">
   
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -122,19 +122,19 @@
          <div class="column is-12">
             <div class="block has-text-centered">
                <span class="text-white">FAMILY</span>
-               <h1 class="is-capitalize text-lg">My Mom & Dad</h1>
+               <h1 class="is-capitalize text-lg">My Nieces</h1>
 
                <ul class="list-inline breadcumb-nav">
-                  <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-                  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="family.html" class="text-white-50">Family Main</a></li>
-				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="momdad.html" class="text-white-50">Mom & Dad</a></li>
-				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="brothersister.html" class="text-white-50">Brother & Sister-in-Law</a></li>
-				  <li class="list-inline-item"><span class="text-white">/</span></li>
-				  <li class="list-inline-item"><a href="nieces.html" class="text-white-50">Nieces</a></li>		
-               </ul>
+				<li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="family.html" class="text-white-50">Family Main</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="momdad.html" class="text-white-50">Mom & Dad</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="brothersister.html" class="text-white-50">Brother & Sister-in-Law</a></li>
+				<li class="list-inline-item"><span class="text-white">/</span></li>
+				<li class="list-inline-item"><a href="nieces.html" class="text-white-50">Nieces</a></li>		
+			 </ul>
             </div>
          </div>
       </div>
@@ -147,30 +147,67 @@
 		<div class="columns is-align-items-center">
 			<div class="column is-6-desktop">
 				<div class="service-img">
-					<img src="image/family/mom&dad.jpeg" alt="" class="w-75" height="125">
+					<img src="image/food/varietyoffoods.jpg" alt="" class="w-75" height="125">
 				</div>
 			</div>
 			<div class="column is-6-desktop">
 				<div class="service-info ">
-					<span class="text-color has-text-weight-bold">Mom & Dad</span>
+					<span class="text-color has-text-weight-bold">My Nieces</span>
 					<h3 class="text-md mb-5 mt-3">
-						
-					</h3>
-					<p>My mom and dad have been married for over forty years. 
-						That is no small feat! I am so proud of them and thankful 
-						to them for showing me what a happy marriage looks like. 
-						They were together in middle school, my dad moved away 
-						and this ended their relationship. But that wasn’t the end 
-						of the story for them. They randomly ran into each other at a Christmas 
-						party about ten years later and the rest is history! 
-						It certainly feels like fate played a role in joining 
-						these two together again. 
+						Meet Kaitlyn and Ella
+					</h3> 
+					<p>My nieces are super cute and equally as talented. My nieces are some of my favorite people. 
+						They have so much to offer the world. Kaitlyn is the oldest at 20 years old, Ella is 10. 
+						They are both so unique. Kaitlyn is an old soul. She loves Elvis and has since she was little. 
+						She is one of the best people to call if you’re in trouble or going through something tough. 
+						She is funny, smart and capable of anything. Ella is the artist and musician of the family. 
+						She draws so well! She taught herself piano and can play quite the assortment of songs. 
+						They make my heart smile.  
 					</p>
 				</div>
 			</div>
 		</div>
 
-		
+		<div class="content-padding is-relative">
+			<div class="columns is-align-items-center">
+				<div class="column is-6-desktop">
+					<div class="service-info">
+						<span class="text-color has-text-weight-bold">Italian</span>
+						<h3 class="text-md mb-5 mt-3">
+							Pasta Goodness
+						</h3>
+						<p>One of my favorite dishes is pasta. My favorite is from Cheesecake Factory. They serve the Four Cheese Pasta. *Chefs Kiss*
+						</p>
+
+					</div>
+				</div>
+				<div class="column is-6-desktop">
+					<div class="service-img">
+						<img src="image/food/pasta.jpg" alt="" width="500" height="222">
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="columns is-align-items-center">
+			<div class="column is-6-desktop">
+				<div class="service-img">
+					<img src="image/food/dragon.jpg" alt="" class="w-100">
+				</div>
+			</div>
+			<div class="column is-6-desktop">
+				<div class="service-info">
+					<span class="text-color has-text-weight-bold">Japanese</span>
+					<h3 class="text-md mb-5 mt-3">
+						Sushi Rolls
+					</h3>
+					<p>Another food that is at the top of my list is sushi. Its light, 
+						refreshing, and not half bad for you. The Dragon Roll is always 
+						a favorite!</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 
